--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,11 +1,10 @@
-version: '2'
+version: '3'
 services:
   nginx:
-    image: jwilder/nginx-proxy:alpine
+    image: jwilder/nginx-proxy:alpine #CURRENT DIGEST:sha256:7c23de74c690bb8af3cb179cd8eb7085d32a46deeee79722b426c4bc93301867
     container_name: syspass_nginx
     restart: unless-stopped
     networks:
-      - pre-existing
       - nginx-to-webapp
     ports:
       - "80:80"
@@ -14,8 +13,8 @@ services:
       - ./ssl:/etc/nginx/certs
       - /var/run/docker.sock:/tmp/docker.sock:ro
 
-  app:
-    container_name: syspass_app
+  webapp:
+    container_name: syspass_webapp
     image: syspass/syspass:3.2.10-php7.4
     restart: always
     ports:
@@ -26,9 +25,9 @@ services:
     environment:
       - USE_SSL=no                     # explained at https://syspass-doc.readthedocs.io/en/3.1/installing/docker.html#id2
       - VIRTUAL_PROTO=https            # explained at https://hub.docker.com/r/jwilder/nginx-proxy
-      - VIRTUAL_HOST=YOUR_VIRTUAL_HOST # explained at https://github.com/nginx-proxy/nginx-proxy
+      - VIRTUAL_HOST=VIRTUAL_HOST      # explained at https://github.com/nginx-proxy/nginx-proxy
       - VIRTUAL_PORT=443               # explained at https://github.com/nginx-proxy/nginx-proxy
-      - CERT_NAME=YOUR_VIRTUAL_HOST    # explained at https://github.com/nginx-proxy/nginx-proxy
+      - CERT_NAME=VIRTUAL_HOST         # explained at https://github.com/nginx-proxy/nginx-proxy
     networks: 
       - nginx-to-webapp
       - webapp-to-db
@@ -38,10 +37,10 @@ services:
     restart: always
     image: mariadb:10.2
     environment:
-      MYSQL_ROOT_PASSWORD: YOUR_ROOT_MYSQL_PASSWORD
+      MYSQL_ROOT_PASSWORD: MYSQL_ROOT_PASSWORD
       MYSQL_DATABASE: syspass
       MYSQL_USER: syspass
-      MYSQL_PASSWORD: YOUR_MYSQL_PASSWORD
+      MYSQL_PASSWORD: MYSQL_PASSWORD
     networks:
       - webapp-to-db
     ports:
@@ -49,16 +48,6 @@ services:
     volumes:
       - ./syspass-db:/var/lib/mysql
 
-volumes:
-  syspass-config:
-  syspass-backup:
-  syspass-db:
-
 networks:
   webapp-to-db:
   nginx-to-webapp:
-  pre-existing:
-    # You need to create external network if it's not exists.
-    # for example: docker network create syspass_pre-existing
-    name: syspass_pre-existing
-    external: true
